fix: token 확인 시 권한 검사 로직 수정